--- a/main.html
+++ b/main.html
@@ -4,32 +4,24 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<title>Login Form</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<script type="text/javascript" src="./script.js">
+	</script>
 	<h1>Login Form</h1>
-
-	<form id="loginForm">
-		 <label for="username">Username:</label>
-        <input type="text" id="username" placeholder="Username"><br><br>
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" placeholder="Password"><br><br>
-
-        <label>
-            <input type="checkbox" id="rememberMe"> Remember me
-        </label><br><br>
-
-        <input type="submit" id="submit" value="Submit">
-    </form>
-
-    <button id="existing" style="display:none;">Login as existing user</button>
-
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<form id="loginForm" action="/submit-form" method="POST">
+		<input type="text" placeholder="Username" id="username">
+	</input>
+		<input type="password" placeholder="Password" id="password">
+	</input>
+		<label for="checkbox">Remember me</label>
+		<input type="checkbox" id="checkbox">
+	</input>
+		<input type="submit" id="submit" value="Submit">
+	</input>
+	</form>
 </body>
 
 </html>
