--- a/main.html
+++ b/main.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Form</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<script type="text/javascript" src="./script.js">
-	</script>
-	<h1>Login Form</h1>
-	<form id="loginForm" action="/submit-form" method="POST">
-		<input type="text" placeholder="Username" id="username">
-	</input>
-		<input type="password" placeholder="Password" id="password">
-	</input>
-		<label for="checkbox">Remember me</label>
-		<input type="checkbox" id="checkbox">
-	</input>
-		<input type="submit" id="submit" value="Submit">
-	</input>
-	</form>
-</body>
+    <h1>Login Form</h1>
+    <form id="loginForm">
+        <input type="text" id="username" placeholder="Username" required>
+        <input type="password" id="password" placeholder="Password" required>
+        <label>
+            <input type="checkbox" id="checkbox"> Remember me.
+        </label>
+        <input type="submit" id="submit" value="Submit">
+    </form>
+    <button id="existing" style="display: none;">Login as existing user</button>
 
+     <script type="text/javascript" src="./script.js">
+</script>
+</body>
 </html>
+
+
+
+
+
+   
