--- a/main.html
+++ b/main.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-    <link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Login Form</h1>
-    <form id="login-form">
-        <label for="username">Username:</label>
-        <input type="text" id="username" placeholder="Username" required>
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" placeholder="Password" required>
-        <br>
-        <input type="checkbox" id="checkbox">
-        <label for="checkbox">Remember me</label>
-        <br>
-        <input type="submit" id="submit" value="Submit">
-    </form>
-    <button id="existing" style="display: none;">Login as existing user</button>
-    <script type="text/javascript" src="./script.js"></script>
+	<!-- the entire body must be written by student -->
+	<h1>Login Form</h1>
+	<form id="login-form">
+		<label for="username">Username:</label>
+		<input type="text" placeholder="Username" id="username">
+		<br>
+		<label for="password">Password:</label>
+		<input type="password" placeholder="Password" id="password">
+		<br>
+		<input type="checkbox" id="checkbox"/>
+		<label for="checkbox">Remember me:</label>
+		<br>
+		<input type="submit" id="submit" value="Submit">
+	</form>
+	<button id="existing">Login as existing user</button>
+    <script type="text/javascript" src="./script.js">
+</script>
+
 </body>
+
 </html>
